--- a/style.css
+++ b/style.css
@@ -25,6 +25,24 @@ form {
     padding-top: 15px;
 }
 
+.double-input input {
+    width: 47.2%;
+    
+}
+
+.large-input input{
+    width: 97%;
+
+}
+
+.double-input input, .large-input input {
+    padding: 5px 5px;
+    background-color: #f5f6f7;
+    border : 1px solid #ccd0d5;
+    border-radius : 5px;
+    margin-bottom: 6px;
+}
+
 .form-submit {
     margin: 20px 0;
     text-align: center;
@@ -32,7 +50,7 @@ form {
 }
 
 .form-submit button{
-    background-color: aquamarine;
+    background-color: rgb(51, 118, 80);
     color: aliceblue;
     width: 150px;
     padding: 8px 30px;
