--- a/style.css
+++ b/style.css
@@ -61,6 +61,18 @@ select {
     background-color: #FFF;
 }
 
+.gender-selection fieldset {
+    padding : 20px 10px;
+    
+}
+
+.gender-selection label {
+    border : 1px solid #ccd0d5;
+    padding : 5px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
 .form-submit {
     margin: 20px 0;
     text-align: center;
